static/S4C_calendar.css
/* (A) GLOBAL */
/* (A1) PAGE TRANSITION */
@keyframes zoom-in{from{transform:scale(0)}to{transform:scale(1)}}@keyframes zoom-out{from{transform:scale(1)}to{transform:scale(0)}}::view-transition-old(zoom){animation:.2s linear both zoom-out}::view-transition-new(zoom){animation:.2s linear both zoom-in}

/* (A2) WHOLE PAGE */
* {
  font-family: Arial, Helvetica, sans-serif;
  box-sizing: border-box;
}
body {
  position: relative;
  padding: 0; margin: 0;
  overflow-x: hidden;
}

/* (A3) COLORS */
:root {
  --bg-color-a: #898989; /* page header + form label */
  --bg-color-b: #404040; /* calendar header */
  --bg-color-c: #d73a3a; /* buttons */
}

/* (B) PERIOD SELECTOR */
#calHead {
  /* display: flex;  */
  align-items: center;
  padding: 15px;
  background: var(--bg-color-a);
}
#calPeriod { flex-grow: 1; }
#calHead input, #calHead select {
  font-size: 35px;
  border-radius: 1px;
  border: 0; outline: none;
  color: #fff; background: 0;
  cursor: pointer;
  margin-left: 10px;
  outline-style: solid;
}
#calHead option { color: #000; }
#calYear {
  width: 140px;
  margin-left: 10px;
}
#calHead #calAdd {
  padding: 10px 30px;
  background: var(--bg-color-c);
}

#calHead #comPro {
  padding: 10px 30px;
  background: #4caf50;
}

/* (C) CALENDAR */
/* (C1) ROWS */
#calDays, .calRowHead, .calRowBack { display: flex; }
#calDays, .calRow, .calRowHead, .calRowEvt {
  position: relative;
  width: 100%;
}
.calRow { min-height: 100px; }
.calRowHead, .calRowEvt { z-index: 2; }
.calRowBack {
  position: absolute;
  top: 0; left: 0; z-index: 1;
  width: 100%; height: 100%;
}
.calRowEvt {
  padding: 15px;
  font-size: 24px;
  font-weight: 700;
  white-space: nowrap; text-overflow: ellipsis;
  overflow: hidden; cursor: pointer;
  border-radius: 10px;
}

/* (C2) CELLS & EVENTS */
.calCell { width: 14.2857%; }
.w1 { width: 14.2857%; } .w2 { width: 28.5714%; } .w3 { width: 42.8571%; }
.w4 { width: 57.1428%; } .w5 { width: 71.4285%; } .w6 { width: 85.7142%; }
.w7 { width: 100%; }
.o1 { left: 14.2857%; } .o2 { left: 28.5714%; } .o3 { left: 42.8571%; }
.o4 { left: 57.1428%; } .o5 { left: 71.4285%; } .o6 { left: 85.7142%; }

#calDays .calCell {
  color: #fff; background: var(--bg-color-b);
  font-weight: 700; text-align: center;
  padding: 15px 0;
}
.calRowHead .calCell {
  font-size: 36px;
  font-weight: 700;
  color: #474747;
  padding: 5px;
}
.calRowHead .calCellDay:hover {
  color: #ff5b5b;
  cursor: pointer;
}
.calRowBack .calCell { border: 1px solid #f5f5f5; }

.calRowBack .calCell:hover {
  background: #ffd3d3;
  cursor: pointer;
}
.calBlank { background: #f5f5f5; }
.calToday { background: #feffd3; }

/* (D) EVENT FORM */
#calForm {
  position:absolute; top: 0; left: 0; z-index: 999;
  width: 100vw; height: 100%; min-height: 100vh;
  padding: 0; margin: 0; border: 0;
  background: rgba(0,0,0,0.5);
  view-transition-name: zoom;
}
#calForm:is([open]), #calForm form {
  display: flex; flex-wrap: wrap;
  align-items: center; justify-content: center;
}
#calForm form {
  position: relative;
  width: 70%; padding: 15px;
  border-radius: 10px;
  background: #fff;
}
#evtCX {
  position: absolute;
  top: 0; right: 0;
  padding: 10px;
  font-size: 30px;
  font-weight: 700;
  color: var(--bg-color-c);
  cursor: pointer;
}
#calForm h2 { margin: 0 0 5px 0; }
#calForm .evt50 { width: 50%; }
#calForm .evt100 { width: 100%; }
#calForm .evt50, #calForm .evt100 { padding: 8px; }
#calForm label, #calForm input[type=datetime-local], #calForm input[type=color], #calForm input[type=text] {
  display: block;
  width: 100%;
}
#calForm label {
  color: #a1a1a1;
  font-size: 12px;
  margin-bottom: 5px;
}
#calForm input[type=datetime-local], #calForm input[type=text] {
  padding: 5px;
  border: 1px solid #eee;
  background: #f5f5f5;
}
#calForm input[type=color] { height: 30px; border: 0; }
#calForm input[type=button], #calForm input[type=submit] {
  border: 0; padding: 10px; margin: 10px 2px 0 0;
  color: #fff; background: var(--bg-color-c);
  cursor: pointer;
}

